--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
-env/
 *.pyc
-*.DS_Store
+*.pyo
+env
+env*
+dist
+build
+*.egg
 *.egg-info
+_mailinglist
+.tox
+.cache/
+.idea/
 build/
+env/
+*.DS_Store
 dist/
+.eggs/
